Slight tweaks overall pplus maybe oppenent handling